# dead-simple-memory-mcp

./: README.md  pyproject.toml
src/mcp_memory_server/: __init__.py  __main__.py  config.py  database.py  embeddings.py  server.py  web.py
src/mcp_memory_server/static/css/: style.css
src/mcp_memory_server/static/js/: app.js
src/mcp_memory_server/templates/: index.html
tests/: __init__.py  conftest.py  test_database.py  test_embeddings.py  test_web.py
